src/objects/ANG_Contact_Tracking_History__c.object
<CustomObject>
    <description>Object to track field changes on contacts</description>
    <fields>
        <fullName>ApiName__c</fullName>
        <description>API name of the changed field.</description>
        <label>ApiName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Contact Id related with the current field change.</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Tracking History</relationshipLabel>
        <relationshipName>Contact_Tracking_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>New_Value__c</fullName>
        <description>New value of the changed field.</description>
        <label>New Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Old_Value__c</fullName>
        <description>Old value of the changed field.</description>
        <label>Old Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>What__c</fullName>
        <description>Label of the changed field.</description>
        <label>What</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Contact Tracking History</label>
    <listViews>
        <fullName>Email_changes</fullName>
        <columns>What__c</columns>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>New_Value__c</columns>
        <columns>Old_Value__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>Email changes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CONTH-{00000000}</displayFormat>
        <label>Contact Tracking History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Tracking History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>